--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,17 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+chrono = { version = "0.4" }
 derive-new = { version = "0.5" }
 env_logger = { version = "0.8" }
 form_urlencoded = { version = "1.0" }
+http = { version = "0.2" }
 hyper = { version = "0.14", features = ["http1", "http2", "server", "tcp"] }
 log = { version = "0.4" }
 num-rational = { version = "0.4", features = ["serde"] }
 num-traits = { version = "0.2" }
 once_cell = { version = "1.8" }
+regex = { version = "1.5" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 tera = { version = "1.12" }
